<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedul</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_todo">AddTodo</string>
    <string name="actionbar_add">Add</string>
    <string name="button_add">Add</string>
    <string name="summary_locked_appointments">Låser appointments fra å flyttes innad, og legges til i timeplanen.</string>
    <string name="title_locked_appointments">Lås appointments</string>
    <string name="app_settings">App settings</string>
    <string name="dialog_title_alarm_frequency">Alarmen skal ringe hvert:</string>
    <string name="summary_alarm_frequency">Hvor ofte skal alarmen ringe i siste time før appointment?</string>
    <string name="title_alarm_frequency">Alarm-frekvens</string>
    <string name="actionbar_settings">Settings</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="bClose">Close</string>
    <string name="title_activity_dummy_alarm_activity">Dummy</string>
    <string name="service_alarm">AlarmService</string>
    <string name="monday">Mandag</string>
    <string name="tuesday">Tirsdag</string>
    <string name="wednesday">Onsdag</string>
    <string name="thursday">Torsdag</string>
    <string name="friday">Fredag</string>
    <string name="saturday">Lørdag</string>
    <string name="sunday">Søndag</string>
    <string name="newappointment">Ny avtale</string>
    <string name="lacking_appointment">Legg til en avtale</string>
    <string name="createhint">Beskrivelse av avtalen</string>
    <string name="createappbutton">Lag Avtale</string>
    <string name="repeatable">Repeat every week?</string>

</resources>
